--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       <p class="lead">Memeriksa apakah ada nilai yang sama:</p>
       <p id="hasilPelajaran"></p>
     </div>
-    <a class="btn btn-danger btn-sm position-absolute bottom end-0" style="margin-bottom: 2rem; margin-right: 2rem" href="twitt.html" role="button">Next</a>
+    <div type="submit">
+      <a class="btn btn-danger btn-sm" style="float: right; margin-bottom: 2rem; margin-right: 2rem" href="twitt.html" role="button">Next</a>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
