--- a/registration.html
+++ b/registration.html
@@ -27,7 +27,9 @@
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <a class="btn btn-danger btn-sm position-absolute bottom-0 start-0" style="margin-bottom: 2rem; margin-left: 2rem" href="twitt.html" role="button">Back</a>
+    <div type="submit">
+      <a class="btn btn-danger btn-sm" style="float: left; margin-top: 4rem; margin-left: 0rem; margin-bottom: 2rem" href="twitt.html" role="button">Back</a>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
