--- a/twitt.html
+++ b/twitt.html
@@ -14,10 +14,12 @@
     <div class="form-floating">
       <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 250px"></textarea>
       <label for="floatingTextarea2">Masukkan Pesan</label>
+      <button type="submit" class="btn btn-primary" style="margin-top: 1rem;">Kirim</button>
     </div>
-    <button type="submit" class="btn btn-primary" style="margin-top: 1rem; float: right;">Kirim</button>
-        <a class="btn btn-danger btn-sm position-absolute bottom-0 start-0" style="margin-bottom: 2rem; margin-left: 2rem;" href="index.html" role="button">Back</a>
-        <a class="btn btn-danger btn-sm position-absolute bottom-0 end-0" style="margin-bottom: 2rem; margin-right: 2rem;" href="registration.html" role="button">Next</a>
-  <script src="script.js"></script>
+    <div type="submit">
+      <a class="btn btn-danger btn-sm position" style="float: left; margin-bottom: 2rem; margin-left: 0rem; margin-top: 8rem;" href="index.html" role="button">Back</a>
+      <a class="btn btn-danger btn-sm position" style="float: right; margin-bottom: 2rem; margin-right: 0rem; margin-top: 8rem;" href="registration.html" role="button">Next</a>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
