--- a/registration.html
+++ b/registration.html
@@ -27,9 +27,13 @@
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <div type="submit">
-      <a class="btn btn-danger btn-sm" style="float: left; margin-top: 4rem; margin-left: 0rem; margin-bottom: 2rem" href="twitt.html" role="button">Back</a>
-    </div>
+    <section>
+      <div id="container">
+        <section id="backNext">
+          <a class="btn btn-danger btn-sm" href="twitt.html" role="button">Back</a>
+        </section>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
