--- a/twitt.html
+++ b/twitt.html
@@ -9,17 +9,26 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 class="display-4 text-dark" style="margin-bottom: 3rem">Soal no 5</h1>
-    <section id="comment">
-    <div class="form-floating">
-      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 250px"></textarea>
-      <label for="floatingTextarea2">Masukkan Pesan</label>
-      <button type="submit" class="btn btn-primary" style="margin-top: 1rem;">Kirim</button>
-    </div>
-    <div type="submit">
-      <a class="btn btn-danger btn-sm position" style="float: left; margin-bottom: 2rem; margin-left: 0rem; margin-top: 8rem;" href="index.html" role="button">Back</a>
-      <a class="btn btn-danger btn-sm position" style="float: right; margin-bottom: 2rem; margin-right: 0rem; margin-top: 8rem;" href="registration.html" role="button">Next</a>
-    </div>
+    <section>
+      <h1 class="display-4 text-dark" style="margin-bottom: 3rem">Soal no 5</h1>
+      <section id="comment">
+        <div class="form-floating">
+          <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 250px"></textarea>
+          <label for="floatingTextarea2">Masukkan Pesan</label>
+          <button type="submit" class="btn btn-primary" style="float: right; margin-top: 1rem">Kirim</button>
+        </div>
+      </section>
+    </section>
+    <section>
+      <div id="container">
+        <section id="backNext">
+          <a class="btn btn-danger btn-sm position" style="float: left" a href="index.html" role="button">Back</a>
+          <a class="btn btn-danger btn-sm position" style="float: right" a href="registration.html" role="button">Next</a>
+        </section>
+      </div>
+    </section>
+
+    <!-- Script Javascript -->
     <script src="script.js"></script>
   </body>
 </html>
