--- a/index.html
+++ b/index.html
@@ -6,53 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Tugas Sesi 7 Array</title>
   </head>
   <body>
     <!-- Soal nomor 1 -->
-    <section id="nomor1"></section>
-    <div class="container">
-      <h1 class="display-4">Soal no 1</h1>
-      <p class="lead">Panjang data array adalah:</p>
-      <p id="panjangData"></p>
-      <p class="lead">Daftar bidang pekerjaan IT:</p>
-      <p id="bidangPekerjaan"></p>
+    <div id="container">
+      <h1 id="soal1" class="display-4">Soal no 1</h1>
+      <section id="a">
+        <p class="lead">Panjang data array adalah:</p>
+        <p id="panjangData"></p>
+        <p class="lead">Daftar bidang pekerjaan IT:</p>
+        <p id="bidangPekerjaan"></p>
+      </section>
     </div>
 
     <!-- Soal nomor 2 -->
-    <section id="nomor2"></section>
-    <div class="container">
-      <h1 class="display-4">Soal no 2</h1>
-      <p class="lead">Seluruh anggota team:</p>
-      <p id="fullTim"></p>
-      <p class="lead">Tim 1:</p>
-      <p id="tim1"></p>
-      <p class="lead">Tim 2:</p>
-      <p id="tim2"></p>
+    <div id="container">
+      <h1 id="soal2" class="display-4">Soal no 2</h1>
+      <section id="b">
+        <p class="lead">Seluruh anggota team:</p>
+        <p id="fullTim"></p>
+        <p class="lead">Tim 1:</p>
+        <p id="tim1"></p>
+        <p class="lead">Tim 2:</p>
+        <p id="tim2"></p>
+      </section>
     </div>
+
     <!-- Soal nomor 3 -->
-    <section id="nomor3"></section>
-    <div class="container">
-      <h1 class="display-4">Soal no 3</h1>
-      <p class="lead">Data array:</p>
-      <p id="arrayAwal"></p>
-      <p class="lead">Hasil array baru dikalikan 5:</p>
-      <p id="arrayBaru"></p>
+    <div id="container">
+      <h1 id="soal3" class="display-4">Soal no 3</h1>
+      <section id="c">
+        <p class="lead">Data array:</p>
+        <p id="arrayAwal"></p>
+        <p class="lead">Hasil array baru dikalikan 5:</p>
+        <p id="arrayBaru"></p>
+      </section>
     </div>
+
     <!-- Soal nomor 4 -->
-    <section id="nomor4"></section>
-    <div class="container">
-      <h1 class="display-4">Soal no 4</h1>
-      <p class="lead">Pelajaran 1:</p>
-      <p id="pelajaranPertama"></p>
-      <p class="lead">Pelajaran 2:</p>
-      <p id="pelajaranKedua"></p>
-      <p class="lead">Memeriksa apakah ada nilai yang sama:</p>
-      <p id="hasilPelajaran"></p>
+    <div id="container">
+      <h1 id="soal4" class="display-4">Soal no 4</h1>
+      <section id="d">
+        <p class="lead">Pelajaran 1:</p>
+        <p id="pelajaranPertama"></p>
+        <p class="lead">Pelajaran 2:</p>
+        <p id="pelajaranKedua"></p>
+        <p class="lead">Memeriksa apakah ada nilai yang sama:</p>
+        <p id="hasilPelajaran"></p>
+      </section>
     </div>
-    <div type="submit">
-      <a class="btn btn-danger btn-sm" style="float: right; margin-bottom: 2rem; margin-right: 2rem" href="twitt.html" role="button">Next</a>
+
+    <div id="container">
+      <section id="backNext">
+        <a class="btn btn-danger btn-sm" style="float: right" href="twitt.html" role="button">Next</a>
+      </section>
     </div>
+
+    <!-- Script Javascript -->
     <script src="script.js"></script>
   </body>
 </html>
